# rust-keyboard-synth

./: Cargo.toml  Project_Review.md  README.md  virtual_keyboard.rs  virtual_keyboard2.rs
keyboard/: Cargo.toml
keyboard/src/: .connection.rs.swp  .main.rs.swp  .sound.rs.swp  connection.rs  main.rs  sound.rs  virtual_keyboard.rs
