[package]
name = "keyboard"
version = "0.1.0"
authors = ["acm"]
edition = "2018"

[dependencies]
piston_window = "0.96.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.29.0"
piston2d-sprite = "0.53.0"
image = "0.21.0"
piston2d-drag_controller = "0.27.0"
piston2d-deform_grid = "0.2.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
vecmath = "1.0.0"
camera_controllers = "0.29.0"
rand = "0.6.0"
shader_version = "0.6.0"
