[package]
name = "keyboard"
version = "0.1.0"
authors = ["barmovshovich"]
edition = "2018"

[dependencies]
midir = "0.5.0"
wmidi = "1.1.0"
pitch_calc = "0.11.1"
dimensioned = "0.7.0"
sound_stream = "*"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
